--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ sqlparse==0.4.2
 whitenoise==6.2.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
+django-cors-headers==3.14.0
 pytz==2021.1
