--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
 django-cors-headers==3.14.0
 pytz==2021.1
+Unidecode==1.2.0 
+
+# khi deploy mà fail thì chỉ có là thiếu module => xem module còn thiếu là gì => pip list => xem version của module đó 
+# => ghi vào file requirement.txt  
